; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_revparse.c_ensure_base_rev_is_not_known_yet.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_revparse.c_ensure_base_rev_is_not_known_yet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_EINVALIDSPEC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ensure_base_rev_is_not_known_yet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ensure_base_rev_is_not_known_yet(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = icmp eq i32* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %9

7:                                                ; preds = %1
  %8 = load i32, i32* @GIT_EINVALIDSPEC, align 4
  store i32 %8, i32* %2, align 4
  br label %9

9:                                                ; preds = %7, %6
  %10 = load i32, i32* %2, align 4
  ret i32 %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
